--- a/package.json
+++ b/package.json
@@ -5,23 +5,24 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-autoprefixer": "~0.1.20130516",
-    "grunt-contrib-clean": "~0.4.0",
+    "grunt-autoprefixer": "~0.2.0",
+    "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-connect": "~0.2.0",
+    "grunt-contrib-compress": "~0.5.2",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-cssmin": "~0.6.0",
     "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-imagemin": "~0.1.3",
-    "grunt-contrib-jshint": "~0.5.2",
-    "grunt-contrib-less": "~0.5",
+    "grunt-contrib-imagemin": "~0.2.0",
+    "grunt-contrib-jshint": "~0.6.4",
+    "grunt-contrib-less": "~0.7.0",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-watch": "~0.4.3",
-    "grunt-concurrent": "~0.1.0",
-    "grunt-jekyll": "~0.3",
+    "grunt-contrib-watch": "~0.5.2",
+    "grunt-concurrent": "~0.3.0",
+    "grunt-jekyll": "~0.4.0",
     "grunt-open": "~0.2.0",
     "grunt-rev": "~0.1.0",
-    "grunt-svgmin": "~0.1.0",
+    "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~0.1.12",
     "connect-livereload": "~0.1.3",
     "matchdep": "~0.1.1"
